--- a/HW1/HW1.ipynb
+++ b/HW1/HW1.ipynb
@@ -20,6 +20,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fe4b57a2",
+   "metadata": {},
+   "source": [
+    "### Download datasets\n",
+    "Run this code below in **Linux** to get datasets prepared.\n",
+    "\n",
+    "If you are using **Windows** instead, please create a \"datasets\" directory in your working path and unzip the datasets in the directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "60c0aa03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !wget \"https://www.kaggle.com/datasets/rounakbanik/the-movies-dataset/download?datasetVersionNumber=7\"\n",
+    "# !mkdir datasets\n",
+    "# !mv archive.zip datasets\n",
+    "# !unzip datasets/archive"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "10b2983a",
    "metadata": {},
    "source": [
@@ -36,7 +60,7 @@
    "metadata": {},
    "source": [
     "####  Load the dataset using pandas.\n",
-    "please create dataset directory under your working path if the code return error"
+    "please create \"datasets\" directory in your working path if the code return error"
    ]
   },
   {
