--- a/HW1/HW1.ipynb
+++ b/HW1/HW1.ipynb
@@ -20,19 +20,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe4b57a2",
+   "id": "6d63b496",
    "metadata": {},
    "source": [
     "### Download datasets\n",
-    "Run this code below in **Linux** to get datasets prepared.\n",
+    "- Run this code below in **Linux** to get datasets prepared.\n",
     "\n",
-    "If you are using **Windows** instead, please create a \"datasets\" directory in your working path and unzip the datasets in the directory."
+    "- If you are using **Windows** instead, please create a \"datasets\" directory in your working path and unzip the datasets in the directory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "60c0aa03",
+   "execution_count": 2,
+   "id": "efe27050",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
    "id": "10b2983a",
    "metadata": {},
    "source": [
-    "### Data Cleaning\n",
+    "### 1 Data Cleaning\n",
     "\n",
     "- Load the dataset using pandas.\n",
     "- Handle missing values and clean the data appropriately.\n",
@@ -59,13 +59,13 @@
    "id": "9ef0b99d",
    "metadata": {},
    "source": [
-    "####  Load the dataset using pandas.\n",
+    "####  1.1 Load the dataset using pandas.\n",
     "please create \"datasets\" directory in your working path if the code return error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f8d0dff1",
    "metadata": {
     "ExecuteTime": {
@@ -76,19 +76,17 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "pwd = os.getcwd()\n",
     "data_dir = os.path.join(pwd,'datasets')\n",
     "files = os.listdir(data_dir)\n",
+    "files = [file for file in files if (file.endswith('.csv') and not file.endswith('_small.csv'))]\n",
     "dfs = []\n",
     "\n",
     "for file in files:\n",
-    "    if file.endswith('.csv'):\n",
-    "        if file.endswith('_small.csv'): continue\n",
     "#         path=str.replace(os.path.join(data_dir,file), \"\\\\\", \"/\")\n",
-    "        path=os.path.join(data_dir,file)\n",
-    "        df = pd.read_csv(path,low_memory=False)\n",
-    "        dfs.append(df)"
+    "    path=os.path.join(data_dir,file)\n",
+    "    df = pd.read_csv(path,low_memory=False)\n",
+    "    dfs.append(df)"
    ]
   },
   {
@@ -96,12 +94,12 @@
    "id": "af785164",
    "metadata": {},
    "source": [
-    "#### Handle missing values and clean the data appropriately."
+    "#### 1.2 Handle missing values and clean the data appropriately."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0129c281",
    "metadata": {
     "ExecuteTime": {
@@ -273,7 +271,13 @@
       "45464             Satan Triumphant  False          0.0        0.0  \n",
       "45465                     Queerama  False          0.0        0.0  \n",
       "\n",
-      "[45466 rows x 24 columns]\n",
+      "[45466 rows x 24 columns]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "          userId  movieId  rating   timestamp\n",
       "0              1      110     1.0  1425941529\n",
       "1              1      147     4.5  1425942435\n",
@@ -302,12 +306,12 @@
    "id": "58fe1c48",
    "metadata": {},
    "source": [
-    "#### Convert data types if necessary "
+    "#### 1.3 Convert data types if necessary "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "55106b0a",
    "metadata": {
     "ExecuteTime": {
@@ -323,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8a50802a",
    "metadata": {},
    "outputs": [
@@ -359,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ed0fb312",
    "metadata": {
     "ExecuteTime": {
@@ -408,7 +412,7 @@
    "id": "636290f8",
    "metadata": {},
    "source": [
-    "### Exploratory Data Analysis\n",
+    "### 2 Exploratory Data Analysis\n",
     "- Generate summary statistics for the numerical columns.\n",
     "- Explore the distribution of movie ratings and revenues.\n",
     "- Identify the top 10 highest-grossing movies."
@@ -419,12 +423,12 @@
    "id": "616d589d",
    "metadata": {},
    "source": [
-    "#### Generate summary statistics for the numerical columns."
+    "#### 2.1 Generate summary statistics for the numerical columns."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "aacea4ce",
    "metadata": {
     "ExecuteTime": {
@@ -570,7 +574,7 @@
        "max    3.800000e+08  5.000000e+00  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,12 +593,12 @@
    "id": "571e3adb",
    "metadata": {},
    "source": [
-    "#### Explore the distribution of movie ratings and revenues."
+    "#### 2.2 Explore the distribution of movie ratings and revenues."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f0a27de5",
    "metadata": {
     "ExecuteTime": {
@@ -648,12 +652,12 @@
    "id": "1f6001dc",
    "metadata": {},
    "source": [
-    "#### Identify the top 10 highest-grossing movies."
+    "#### 2.3 Identify the top 10 highest-grossing movies."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "64e5d7c3",
    "metadata": {
     "ExecuteTime": {
@@ -756,7 +760,7 @@
        "42222                          Beauty and the Beast  1.262886e+09"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "cea6e587",
    "metadata": {
     "ExecuteTime": {
@@ -888,7 +892,7 @@
        "[19956 rows x 2 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "c527763a",
    "metadata": {
     "ExecuteTime": {
@@ -940,7 +944,7 @@
    "id": "81cc34dc",
    "metadata": {},
    "source": [
-    "### Genre Analysis\n",
+    "### 3 Genre Analysis\n",
     "- Create a new column that lists the genre of each movie.\n",
     "- Determine the most common movie genre.\n",
     "- Analyze the average rating by genre."
@@ -951,12 +955,12 @@
    "id": "e54ec4a0",
    "metadata": {},
    "source": [
-    "#### Create a new column that lists the genre of each movie."
+    "#### 3.1 Create a new column that lists the genre of each movie."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "15a27039",
    "metadata": {},
    "outputs": [],
@@ -966,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "619cbbad",
    "metadata": {
     "ExecuteTime": {
@@ -1090,7 +1094,7 @@
        "[93548 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,16 +1115,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "92054768",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# merge into the original dataframe\n",
+    "dfs[-2] = pd.merge(dfs[-4],genres_df,left_on=\"id\",right_on='movieId',how='left')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3479c34e",
    "metadata": {},
    "source": [
-    "#### Determine the most common movie genre."
+    "#### 3.2 Determine the most common movie genre."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "cde454df",
    "metadata": {
     "ExecuteTime": {
@@ -1149,12 +1164,12 @@
    "id": "3deb47d7",
    "metadata": {},
    "source": [
-    "#### Analyze the average rating by genre."
+    "#### 3.3 Analyze the average rating by genre."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "f86eef3a",
    "metadata": {
     "ExecuteTime": {
@@ -1170,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "4878bd5f",
    "metadata": {
     "ExecuteTime": {
@@ -1322,7 +1337,7 @@
        "unknown          3.458762"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1333,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "4e99b774",
    "metadata": {
     "ExecuteTime": {
@@ -1369,7 +1384,7 @@
    "id": "349a43b5",
    "metadata": {},
    "source": [
-    "### Temporal Trends \n",
+    "### 4 Temporal Trends \n",
     "- Examine how the number of movies released has changed over time. \n",
     "- Investigate trends in movie revenues over the years"
    ]
@@ -1379,12 +1394,12 @@
    "id": "c21f93fa",
    "metadata": {},
    "source": [
-    "#### Examine how the number of movies released has changed over time."
+    "#### 4.1 Examine how the number of movies released has changed over time."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "4a2bef62",
    "metadata": {
     "ExecuteTime": {
@@ -1424,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "90639260",
    "metadata": {
     "ExecuteTime": {
@@ -1489,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "425a3a68",
    "metadata": {
     "ExecuteTime": {
@@ -1594,7 +1609,7 @@
        "[135 rows x 1 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1613,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "5a31dbe4",
    "metadata": {
     "ExecuteTime": {
@@ -1765,7 +1780,7 @@
        "unknown          3.458762"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1779,7 +1794,7 @@
    "id": "99dccc06",
    "metadata": {},
    "source": [
-    "### Insights and Conclusion:\n",
+    "### 6 Insights and Conclusion:\n",
     "- Summarize your key findings from the EDA and Genre Analysis.\n",
     "- Discuss any interesting trends observed in the Temporal Trends section."
    ]
@@ -1796,6 +1811,30 @@
     "5. Dispite there are different movie genres, the average rating of them are almost the same. The top 5 genres with the highest rating are western, mystery, animation, TV movies and crime.\n",
     "6. The numbers of released movies were getting more and more until 2020. Owing to the impact of pandemic, there are almost no movie in 2020. Additionally, the numbers of released movies grew dramatically from 1980 until 2020.\n",
     "7. The average movie revenues increased rapidly between 1980 and 2000, then the revenues went up and down, and peaked around 2018."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "309560ca",
+   "metadata": {},
+   "source": [
+    "### Export the cleaned dataset\n",
+    "you can get those cleaned datasets at http://8.222.204.221/INFO212/HW1/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "514d0386",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "if not os.path.exists(os.path.join(data_dir,\"outputs\")):\n",
+    "    os.makedirs('datasets/outputs')\n",
+    "for i,df in enumerate(dfs):\n",
+    "    df.to_csv(os.path.join(data_dir,\"outputs\",\"cleaned_\" + files[i]))"
    ]
   }
  ],
