--- a/HW2/HW2.ipynb
+++ b/HW2/HW2.ipynb
@@ -10,6 +10,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "id": "c89fd751",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: altair[all] in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (5.3.0)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from altair[all]) (3.1.2)\n",
+      "Requirement already satisfied: jsonschema>=3.0 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from altair[all]) (4.17.3)\n",
+      "Requirement already satisfied: numpy in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from altair[all]) (1.25.2)\n",
+      "Requirement already satisfied: packaging in c:\\users\\hasaki\\appdata\\roaming\\python\\python39\\site-packages (from altair[all]) (23.1)\n",
+      "Requirement already satisfied: pandas>=0.25 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from altair[all]) (2.0.3)\n",
+      "Requirement already satisfied: toolz in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from altair[all]) (0.12.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.0.1 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from altair[all]) (4.7.1)\n",
+      "Requirement already satisfied: altair-tiles>=0.3.0 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from altair[all]) (0.3.0)\n",
+      "Requirement already satisfied: anywidget>=0.9.0 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from altair[all]) (0.9.12)\n",
+      "Requirement already satisfied: pyarrow>=11 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from altair[all]) (16.1.0)\n",
+      "Requirement already satisfied: vega-datasets>=0.9.0 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from altair[all]) (0.9.0)\n",
+      "Requirement already satisfied: vegafusion[embed]>=1.6.6 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from altair[all]) (1.6.9)\n",
+      "Requirement already satisfied: vl-convert-python>=1.3.0 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from altair[all]) (1.4.0)\n",
+      "Requirement already satisfied: mercantile in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from altair-tiles>=0.3.0->altair[all]) (1.2.1)\n",
+      "Requirement already satisfied: xyzservices in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from altair-tiles>=0.3.0->altair[all]) (2024.4.0)\n",
+      "Requirement already satisfied: ipywidgets>=7.6.0 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from anywidget>=0.9.0->altair[all]) (8.0.4)\n",
+      "Requirement already satisfied: psygnal>=0.8.1 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from anywidget>=0.9.0->altair[all]) (0.11.1)\n",
+      "Requirement already satisfied: attrs>=17.4.0 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from jsonschema>=3.0->altair[all]) (22.1.0)\n",
+      "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from jsonschema>=3.0->altair[all]) (0.18.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from pandas>=0.25->altair[all]) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from pandas>=0.25->altair[all]) (2022.7)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from pandas>=0.25->altair[all]) (2023.3)\n",
+      "Requirement already satisfied: psutil in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from vegafusion[embed]>=1.6.6->altair[all]) (5.9.0)\n",
+      "Requirement already satisfied: protobuf in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from vegafusion[embed]>=1.6.6->altair[all]) (5.27.0)\n",
+      "Requirement already satisfied: vegafusion-python-embed==1.6.9 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from vegafusion[embed]>=1.6.6->altair[all]) (1.6.9)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from jinja2->altair[all]) (2.1.1)\n",
+      "Requirement already satisfied: ipykernel>=4.5.1 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (6.25.0)\n",
+      "Requirement already satisfied: ipython>=6.1.0 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (8.12.2)\n",
+      "Requirement already satisfied: traitlets>=4.3.1 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (5.7.1)\n",
+      "Requirement already satisfied: widgetsnbextension~=4.0 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (4.0.5)\n",
+      "Requirement already satisfied: jupyterlab-widgets~=3.0 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (3.0.5)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from python-dateutil>=2.8.2->pandas>=0.25->altair[all]) (1.16.0)\n",
+      "Requirement already satisfied: click>=3.0 in c:\\users\\hasaki\\appdata\\roaming\\python\\python39\\site-packages (from mercantile->altair-tiles>=0.3.0->altair[all]) (8.1.7)\n",
+      "Requirement already satisfied: colorama in c:\\users\\hasaki\\appdata\\roaming\\python\\python39\\site-packages (from click>=3.0->mercantile->altair-tiles>=0.3.0->altair[all]) (0.4.6)\n",
+      "Requirement already satisfied: comm>=0.1.1 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (0.1.2)\n",
+      "Requirement already satisfied: debugpy>=1.6.5 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (1.6.7)\n",
+      "Requirement already satisfied: jupyter-client>=6.1.12 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (7.4.9)\n",
+      "Requirement already satisfied: jupyter-core!=5.0.*,>=4.12 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (5.3.0)\n",
+      "Requirement already satisfied: matplotlib-inline>=0.1 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (0.1.6)\n",
+      "Requirement already satisfied: nest-asyncio in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (1.5.6)\n",
+      "Requirement already satisfied: pyzmq>=20 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (23.2.0)\n",
+      "Requirement already satisfied: tornado>=6.1 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (6.3.2)\n",
+      "Requirement already satisfied: backcall in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipython>=6.1.0->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (0.2.0)\n",
+      "Requirement already satisfied: decorator in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipython>=6.1.0->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipython>=6.1.0->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (0.18.1)\n",
+      "Requirement already satisfied: pickleshare in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipython>=6.1.0->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (0.7.5)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.37,<3.1.0,>=3.0.30 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipython>=6.1.0->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (3.0.36)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipython>=6.1.0->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (2.15.1)\n",
+      "Requirement already satisfied: stack-data in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from ipython>=6.1.0->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (0.2.0)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from jedi>=0.16->ipython>=6.1.0->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (0.8.3)\n",
+      "Requirement already satisfied: entrypoints in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from jupyter-client>=6.1.12->ipykernel>=4.5.1->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (0.4)\n",
+      "Requirement already satisfied: platformdirs>=2.5 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from jupyter-core!=5.0.*,>=4.12->ipykernel>=4.5.1->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (3.10.0)\n",
+      "Requirement already satisfied: pywin32>=300 in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from jupyter-core!=5.0.*,>=4.12->ipykernel>=4.5.1->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (305.1)\n",
+      "Requirement already satisfied: wcwidth in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from prompt-toolkit!=3.0.37,<3.1.0,>=3.0.30->ipython>=6.1.0->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (0.2.5)\n",
+      "Requirement already satisfied: executing in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from stack-data->ipython>=6.1.0->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (0.8.3)\n",
+      "Requirement already satisfied: asttokens in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from stack-data->ipython>=6.1.0->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (2.0.5)\n",
+      "Requirement already satisfied: pure-eval in c:\\users\\hasaki\\miniconda3\\envs\\dl\\lib\\site-packages (from stack-data->ipython>=6.1.0->ipywidgets>=7.6.0->anywidget>=0.9.0->altair[all]) (0.2.2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# altair installation\n",
+    "!pip install \"altair[all]\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "afe70067",
    "metadata": {},
