--- a/HW2/HW2.ipynb
+++ b/HW2/HW2.ipynb
@@ -3096,10 +3096,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "107fb147",
+   "id": "c6df32dc",
    "metadata": {},
    "source": [
-    "The generated chart would be like this (if you want to validate it your self just run the cell)\n",
+    "The generated chart would be like this (if you want to validate it yourself just run the cell)\n",
     "![barchart](http://8.222.204.221/INFO212/HW2/barchart.png)"
    ]
   },
@@ -3232,12 +3232,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5c5bc8c",
+   "cell_type": "markdown",
+   "id": "79c9b8d4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The generated chart would be like this (if you want to validate it yourself just run the cell)\n",
+    "![linecharts](http://8.222.204.221/INFO212/HW2/linecharts.png)"
+   ]
   },
   {
    "cell_type": "code",
