--- a/HW2/HW2.ipynb
+++ b/HW2/HW2.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "source": [
     "# INFO212 Assignment2 T22\n",
-    "*Name: Qinru Yang ID: 32022940961  \n",
+    "*Name: Qinru Yang ID: 320220940961  \n",
     "Name: Rongshen He ID: 320220940271  \n",
-    "Name: Qirui Zhang ID:  \n",
-    "Name: Wei Dou ID:320220940190*  \n",
+    "Name: Qirui Zhang ID: 320220941080  \n",
+    "Name: Wei Dou ID: 320220940190*  \n",
     "**Objective**: Develop a Python project to analyze and visualize economic indicatorsfrom JSON data files using Pandas and Seaborn or other visualization libraries."
    ]
   },
@@ -70,7 +70,7 @@
     }
    ],
    "source": [
-    "# 定义查询的国家和指标\n",
+    "# Define the countries and metrics for the query\n",
     "countries = [\"CN\", \"BR\", \"JP\", \"CA\", \"NP\"]\n",
     "indicators = {\n",
     "    \"GDP\": \"NY.GDP.MKTP.CD\",\n",
@@ -82,7 +82,7 @@
     "years = range(1980, 2019 + 1)\n",
     "base_url = \"http://api.worldbank.org/v2/country/{}/indicator/{}?date={}:{}&format=json&per_page=100\"\n",
     "\n",
-    "# 获取数据并合并成一个JSON文件\n",
+    "# Get the data and merge it into a JSON file\n",
     "data = {}\n",
     "for indicator_name, indicator_code in indicators.items():\n",
     "    data[indicator_name] = {}\n",
@@ -95,7 +95,7 @@
     "        else:\n",
     "            print(f\"Error fetching data for {country} - {indicator_name}: {response.status_code}\")\n",
     "\n",
-    "# 保存数据到JSON文件\n",
+    "# Save data to JSON file\n",
     "with open(\"world_bank_data.json\", \"w\") as f:\n",
     "    json.dump(data, f, indent=4)\n",
     "\n",
@@ -1928,7 +1928,7 @@
     }
    ],
    "source": [
-    "# 国家名称映射字典\n",
+    "# Country Name Mapping dictionary\n",
     "country_names = {\"CN\": \"China\", \"BR\": \"Brazil\", \"JP\": \"Japan\", \"CA\": \"Canada\", \"NP\": \"Nepal\"}\n",
     "\n",
     "def create_indicator_dataframe(data, indicator):\n",
@@ -1937,7 +1937,7 @@
     "    df_pivot = df.pivot(index='date', columns='country', values=indicator)\n",
     "    return df_pivot\n",
     "\n",
-    "# 创建GDP、Unemployment、Inflation的DataFrame\n",
+    "# Create a GDP, Unemployment, Inflation DataFrame\n",
     "gdp_df = create_indicator_dataframe(data, \"GDP\")\n",
     "unemployment_df = create_indicator_dataframe(data, \"Unemployment\")\n",
     "inflation_df = create_indicator_dataframe(data, \"Inflation\")\n",
@@ -1952,7 +1952,7 @@
     "        display(HTML(_df.to_html()))\n",
     "\n",
     "\n",
-    "# 调用display_dfs函数来一次性输出所有DataFrame\n",
+    "# Call the display_dfs function to output all dataframes at once\n",
     "display_dfs([gdp_df, unemployment_df, inflation_df, tariff_df, gdp_growth_df]\n",
     "            , [\"GDP DataFrame\", \"Unemployment DataFrame\", \"Inflation DataFrame\", \"Tariff rate DataFrame\", \"GDP growth DataFrame\"])"
    ]
@@ -3126,8 +3126,8 @@
     "    alt.hconcat(*charts[:2]),\n",
     "    alt.hconcat(*charts[2:4])\n",
     ").configure_axis(\n",
-    "    labelFontSize=6,  # 设置坐标轴标签字体大小为10\n",
-    "    titleFontSize=10  # 设置坐标轴标题字体大小为12\n",
+    "    labelFontSize=6,  # Set the axis label font size to 10\n",
+    "    titleFontSize=10  # Set the axis title font size to 12\n",
     ")\n",
     "\n",
     "\n",
@@ -3376,14 +3376,15 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# 循环遍历 gdp_growth_df 的每一列\n",
+    "\n",
+    "# Loop through each column of gdp growth df\n",
     "for column in gdp_growth_df.columns:\n",
-    "    # 创建箱线图\n",
-    "    plt.figure(figsize=(10, 1))  # 设置图形大小\n",
+    "    # Create a box diagram\n",
+    "    plt.figure(figsize=(10, 1))  # Set the size of the graph\n",
     "    plt.boxplot(gdp_growth_df[column], notch=True, sym='*', vert=False, showmeans=True, patch_artist=True,\n",
-    "                boxprops={'color': 'orangered', 'facecolor': 'lightgray'})  # 设置背景颜色更暗一些\n",
-    "    plt.xlabel('GDP Growth')  # 设置 x 轴标签\n",
-    "    plt.ylabel(column)  # 设置 y 轴标签为当前列名\n",
+    "                boxprops={'color': 'orangered', 'facecolor': 'lightgray'})  # Make the background color darker\n",
+    "    plt.xlabel('GDP Growth')  # Set the X-axis label\n",
+    "    plt.ylabel(column)  # Set the Y-axis label to the current column name\n",
     "    plt.title(f'Boxplot of {column} GDP Growth')\n",
     "    plt.xticks(fontsize=8)\n",
     "    plt.yticks(ticks=[], labels=[])\n",
@@ -3485,7 +3486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.14"
   },
   "toc": {
    "base_numbering": 1,
